selected robot now sent with command

--- a/todo.txt
+++ b/todo.txt
@@ -3,8 +3,8 @@ version 1:
   features:
     write easy install script
       test new download script
-    add some way to select a listening robot in the interface
     send the selected robot name with commands
+    web client should ask for all listening robots on connect
     move lua code from the client-side interface to the server
     store robot orientation and position on hard disk, not just in memory
       make sure it's not too slow
