--- a/todo.txt
+++ b/todo.txt
@@ -8,7 +8,6 @@ version 1:
     have robots send their power level
   
   fixes:
-    jsdoc for command functions
     inventory covers buttons
       add toggle visibility button to each table
       also move them
@@ -31,6 +30,7 @@ later:
     large scan crashing chrome?
 
   features:
+    change gui based on what components the selected robot has
     allow limited functionality without inventory controller
     allow limited functionality without geolyzer
     robot config opt in to allow sending any code
