--- a/todo.txt
+++ b/todo.txt
@@ -6,6 +6,7 @@ version 1:
     camera: go to robot location
   
   fixes:
+    fix opencomputers recipe file
     add remove button to inventory tables
     does the command loop need to yield periodically?
   
