--- a/todo.txt
+++ b/todo.txt
@@ -6,8 +6,8 @@ version 1:
     camera: go to robot location
   
   fixes:
+    relocate inventory tables
     fix opencomputers recipe file
-    add remove button to inventory tables
     does the command loop need to yield periodically?
   
   pre-release:
