--- a/todo.txt
+++ b/todo.txt
@@ -3,6 +3,10 @@ version 1:
   features:
   
   fixes:
+    voxels are too big, or not big enough? feels cramped
+    lag? maybe send data less often
+    browser tab crashing is annoying
+    not scanning far enough?
     does the command loop need to yield periodically?
   
   pre-release:
