--- a/todo.txt
+++ b/todo.txt
@@ -1,13 +1,13 @@
 version 1:
 
   features:
-  
+    add cutaway form
+
   fixes:
+    pause animation loop when tab isn't visible (maybe fixed)
     voxels are too big, or not big enough? feels cramped
     lag? maybe send data less often
-    browser tab crashing is annoying
     not scanning far enough?
-    does the command loop need to yield periodically?
   
   pre-release:
     set up github so i can develop without breaking the release
