trying to improve rendering

--- a/todo.txt
+++ b/todo.txt
@@ -4,9 +4,8 @@ version 1:
 
   fixes:
     inventory div blocking pointerlock
-    pause animation loop when tab isn't visible (maybe fixed)
-    not scanning far enough? see if big scan is fixed now
-    voxels are too big, or not big enough? feels cramped
+    fix double game loop when page loaded invisible
+    crash with large scan when controls not enabled (also slower render speed than expected)
     lag? maybe send data less often
     improve the ui
   
@@ -23,7 +22,6 @@ later:
   fixes:
     turn object formats into classes for clarity
     robot can't put water in bucket from above the water? investigate
-    large scan crashing chrome?
 
   features:
     hotkeys for different tools
