--- a/todo.txt
+++ b/todo.txt
@@ -13,6 +13,7 @@ version 1:
     write up test plan
     test things
       test server side lua commands
+      make sure config settings work as strings or their appropriate values
     update readme
     bundle up all the stuff so it's easy to download and run
     make a video
