--- a/todo.txt
+++ b/todo.txt
@@ -1,13 +1,16 @@
 version 1:
 
   features:
+    speed up pathfinding by using detect instead of failing moves
+    make the coordinate forms into input groups
 
   fixes:
+    robot should send inventory data one slot at a time
+      server crashing because robot is writing an incomplete json string, write buffer full
     find out if we can use a hostname for the ip config entry
-    lag? maybe send data less often
-    improve the ui
     click to restore console command doesn't really work anymore
     robot reconnects when trying to send a table as return value from console?
+    config.lua args when required? causing useless config option to be set
   
   pre-release:
     set up github so i can develop without breaking the release
