--- a/todo.txt
+++ b/todo.txt
@@ -2,7 +2,7 @@ version 1:
 
   features:
     speed up pathfinding by using detect instead of failing moves
-    
+
   fixes:
     robot should send inventory data one slot at a time
       server crashing because robot is writing an incomplete json string, write buffer full
@@ -10,6 +10,7 @@ version 1:
     click to restore console command doesn't really work anymore
     robot reconnects when trying to send a table as return value from console?
     config.lua args when required? causing useless config option to be set
+    make top right ui use a bootstrap container, rows and cols
   
   pre-release:
     set up github so i can develop without breaking the release
