--- a/todo.txt
+++ b/todo.txt
@@ -4,10 +4,6 @@ version 1:
 
   fixes:
 
-    point class so i can stop worrying about world or game coordinates
-    refactor current functions
-    remove old voxelSideLength definition in map.js?
-
     robot class to store in allRobotData
       position
       power level
@@ -20,15 +16,14 @@ version 1:
       desired behavior
 
       on receive inventory
-        store inventory in robotInfo, under self or external depending on side
-        hide if not currently selected robot
-        add to display div
+        store inventory in robotInfo by side
+        add to display div if currently selected robot
 
       on receive slot
-        update slot in self or external depending on side, for sending robot's robotInfo
+        update slot in inventory on appropriate robot side
 
       on robot move
-        remove external inventories for selected robot
+        remove from display and delete external inventories for selected robot
 
       on click X
         do nothing, remove this button
@@ -36,14 +31,15 @@ version 1:
       on change robot
         remove all inventories, then add selected robot's inventories
 
-      on press I key
-        add the event handlers for this key
+      on click show/hide button
+        add the event handlers for this button
         toggle visibility for currently selected robot's inventories
 
 
     change click to restore command text feature into click to run command again
     tcp crashes when trying to send values the json lib can't encode, catch the error instead
     make top right ui use a bootstrap container, rows and cols
+    raytrace off center sometimes?
   
   pre-release:
     set up github so i can develop without breaking the release
