--- a/todo.txt
+++ b/todo.txt
@@ -22,7 +22,7 @@ version 1:
       on click X ✔︎
         do nothing, remove this button
 
-      on change robot
+      on change robot ✔︎
         remove all inventories, then add selected robot's inventories
 
       on click show/hide button
