--- a/todo.txt
+++ b/todo.txt
@@ -3,9 +3,9 @@ version 1:
   features:
 
   fixes:
+    interface.js failing to reveal command input if raw is true
 
   pre-release:
-    write up test plan
     bundle up all the stuff so it's easy to download and run
     test things
       find out if we can use a hostname for the ip config entry
