--- a/todo.txt
+++ b/todo.txt
@@ -33,7 +33,6 @@ later:
     allow limited functionality without crafting component
     allow limited functionality without inventory controller
     allow limited functionality without geolyzer
-    have robot revert to older command loop version if updated one is broken
     see if we can make water source and flow blocks render differently
     render robot facing (triangular prism or different colored face)
       send orientation
@@ -48,6 +47,9 @@ later:
     make account registration create a new robot if server is on no-player mode
 
 distant future:
+  set waypoints in account for complicated pathing
+  all known inventories tracked per account, robots check those first when crafting or building
+  how to split up a selection among multiple robots?
   visual tool for chaining robot commands together to automate tasks
   edit lua files on robot with an editor in browser
   blueprint storage and rendering
