--- a/todo.txt
+++ b/todo.txt
@@ -3,6 +3,7 @@ version 1:
   features:
 
   fixes:
+    make robot send the same information on its connect and on web client connect
 
   pre-release:
     bundle up all the stuff so it's easy to download and run
