--- a/todo.txt
+++ b/todo.txt
@@ -3,6 +3,8 @@ version 1:
   features:
 
   fixes:
+    the way inventory showing/hiding works is unintuitive
+    robot positions not checked when rendering?
 
   pre-release:
     bundle up all the stuff so it's easy to download and run
