found a new bugaroo

--- a/todo.txt
+++ b/todo.txt
@@ -3,6 +3,7 @@ version 1:
   features:
 
   fixes:
+    split stack into similar stack (source partial, target full) goes over max stack size
 
   pre-release:
     bundle up all the stuff so it's easy to download and run
