fixed overstacking using split functionality

--- a/todo.txt
+++ b/todo.txt
@@ -4,6 +4,7 @@ version 1:
 
   fixes:
     split stack into similar stack (source partial, target full) goes over max stack size
+      test same stack stuff again
 
   pre-release:
     bundle up all the stuff so it's easy to download and run
