working on controls display

--- a/todo.txt
+++ b/todo.txt
@@ -4,6 +4,7 @@ version 1:
 
   fixes:
     explain the controls within the program somewhere
+      make the controls modal toggle via a key
     make lua download fall back to github if the server isn't running
     make robot install use pastebin
     get a new gif for the readme that doesn't have player UI showing
