--- a/todo.txt
+++ b/todo.txt
@@ -3,7 +3,7 @@ version 1:
   features:
 
   fixes:
-    explain the controls within the program somewhere
+    make controls show by default only on first page load
     make lua download fall back to github if the server isn't running
     make robot install use pastebin
     get a new gif for the readme that doesn't have player UI showing
