--- a/todo.txt
+++ b/todo.txt
@@ -3,7 +3,7 @@ version 1:
   features:
 
   fixes:
-    make lua download fall back to github if the server isn't running
+    make lua download fall back to github if the server isn't running (second wget without -f)
     make robot install use pastebin
     make sure this works: ```lua /home/lib/config.lua components {raw=true}```
 
