--- a/todo.txt
+++ b/todo.txt
@@ -3,8 +3,7 @@ version 1:
   features:
 
   fixes:
-    inventory display should open when you interact with a chest
-    remove focus command history on esc
+    inventory display should open when you interact with a chest (done?)
     add openos floppy instructions to robot setup guide
     don't forget the graphics card
     make lua download fall back to github if the server isn't running (second wget without -f)
